syntax = "proto3";


package task;

service TaskService {

  rpc Create(Task) returns (Task){}
  rpc Get(IdReq) returns (Task){}
  rpc List(ListReq) returns (ListRes){}
  rpc GetList(Aid) returns (ListResp){}
  rpc Update(Task) returns (Task){}
  rpc Delete(IdReq) returns (EmptyResp){}
  rpc ListOverdue(ListOverReq) returns (ListOverResp){}
}

message EmptyResp {}

message Task {
  string id = 1;
  string name = 2;
  string title = 3;
  string summary = 4;
  string assignee_id = 5;
  string status = 6;
  string deadline = 7;
  string created_at = 8;
  string updated_at = 9;
  string deleted_at = 10;
}

message GetTask {
    string id = 1;
    string name = 2;
    string title = 3;
    string summary = 4;
    string assignee_id = 5;
    string status = 6;
    string deadline = 7;
    string created_at = 8;
    string updated_at = 9;
    string deleted_at = 10;
    User user = 11;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string profile_photo = 5;
  string bio = 6;
  string email = 7;
  string gender = 8;
  string address = 9;
  string phone_number = 10;
  string created_at = 11;
  string updated_at = 12;
  string deleted_at = 13;
}

message IdReq{
    string id = 1;
}

message Aid{
  string id = 1;
}

message ListReq {
  int64 page = 1;
  int64 limit = 2;
}

message ListResp {
  repeated Task tasks = 1;
}
message ListRes {
  repeated Task tasks = 1;
  int64 count = 2;
}

message ListOverReq {
  string time = 1;
  int64 page = 2;
  int64 limit = 3;
}

message ListOverResp {
  repeated Task tasks = 1;
  int64 count = 2;
}

